Refatorando código, fazendo limpeza de alertas